# OSFileSystemP3

./: .gitignore  CMakeLists.txt
CLI/: CMakeLists.txt  main.cpp  mainwindow.cpp  qconsole.cpp  qconsole.h
FileSystem/: CMakeLists.txt  Makefile  main.c
FileSystem/BootAndReset/: DiskManagement.c  DiskManagement.h  Drive.h
FileSystem/FileManagement/: Block.h  BlockStruct.h  DiskData.h  FileDescriptor.h  FileRW.c  FileRW.h  FileValidantions.h  Inode.h  InodeStruct.h  Superblock.h
FileSystem/Json/: json_creation.c  json_creation.h
FileSystem/Json/PythonFiles/: FileClass.py  JsonParser.py  LabelFile.py  MainWindowClass.py  main.py
InterfacePython/: FileClass.py  LabelFile.py  MainWindowClass.py  TextInputDir.py  main.py  txt.json
